<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.inflation.PersonalInflationFragment">

    <LinearLayout
        android:id="@+id/personal_inflation_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="?dialogPreferredPadding">

        <TextView
            android:id="@+id/personal_inflation_title_text_view"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/personal_inflation"
            android:textStyle="bold"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/personal_inflation_from_year_picker_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusable="false"
            android:hint="@string/default_input_placeholder" />

        <TextView
            android:id="@+id/personal_inflation_year_separator_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:textStyle="bold"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/personal_inflation_to_year_picker_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusable="false"
            android:hint="@string/default_input_placeholder" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/personal_inflation_title_layout"
        android:padding="?dialogPreferredPadding">

        <TableLayout
            android:id="@+id/personal_inflation_table_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_input_placeholder"
                    android:gravity="start"
                    android:layout_weight="1"
                    android:padding="8dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_input_placeholder"
                    android:gravity="end"
                    android:padding="8dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_input_placeholder"
                    android:gravity="end"
                    android:padding="8dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_input_placeholder"
                    android:gravity="end"
                    android:padding="8dp"/>
            </TableRow>
        </TableLayout>
    </ScrollView>
</RelativeLayout>
