<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="?dialogPreferredPadding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="8dp"
                app:cardCornerRadius="4dp">
                <TableLayout
                    android:id="@+id/home_overall_table_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="*"
                    android:padding="?dialogPreferredPadding">

                    <TableRow>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/overall_inflation"
                            android:gravity="start"
                            android:layout_weight="1"
                            android:padding="8dp"
                            android:textStyle="bold"
                            android:textSize="20sp" />
                        <TextView
                            android:id="@+id/home_overall_date_range_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/default_input_placeholder"
                            android:gravity="end"
                            android:padding="8dp"
                            android:textStyle="bold"
                            android:textSize="20sp" />
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:id="@+id/home_overall_personal_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/default_input_placeholder"
                            android:gravity="start"
                            android:layout_weight="1"
                            android:padding="8dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/inflation_global_zero_placeholder"
                            android:gravity="end"
                            android:padding="8dp"/>
                    </TableRow>
                </TableLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="?dialogPreferredPadding"
                app:cardElevation="8dp"
                app:cardCornerRadius="4dp">
                <TableLayout
                    android:id="@+id/home_last_month_table_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="*"
                    android:padding="?dialogPreferredPadding">

                    <TableRow>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/inflation_last_month"
                            android:gravity="start"
                            android:layout_weight="1"
                            android:padding="8dp"
                            android:textStyle="bold"
                            android:textSize="20sp" />
                        <TextView
                            android:id="@+id/home_last_month_date_range_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/default_input_placeholder"
                            android:gravity="end"
                            android:padding="8dp"
                            android:textStyle="bold"
                            android:textSize="20sp" />
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:id="@+id/home_last_month_personal_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/default_input_placeholder"
                            android:gravity="start"
                            android:layout_weight="1"
                            android:padding="8dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/inflation_global_zero_placeholder"
                            android:gravity="end"
                            android:padding="8dp"/>
                    </TableRow>
                </TableLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
